2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	toolbar-factory: Stop using direct access to GdkEvent structs

	Use gdk_event_get_event_type instead of directly accessing
	event->type.

	* src/toolbar-factory.c (tm_popup_context_menu_cb):

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Find in message: Make it work again

	* src/balsa-mime-widget-text.c
	(balsa_mime_widget_text_get_text_widget): new getter;
	* src/balsa-mime-widget-text.h: ditto;
	* src/balsa-message.c (bm_find_entry_changed_cb), (bm_find_again),
	(bm_find_pass_to_entry), (balsa_message_find_in_message): use it
	to get the real text widget (GtkTextView, GtkSourceView).

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mblist: Stop using direct access to GdkEvent structs

	Use GdkEvent getters instead of directly accessing fields.

	* src/balsa-mblist.c (bmbl_select_mailbox), (bmbl_mru_selected_cb):

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	compose window: Connect to the "pressed" signal of a
	GtkGestureMultiPress instead of the "button-press-event" widget
	signal.

	* src/sendmsg-window.c (attachment_button_press_cb),
	(sw_attachment_list):

2020-06-05  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mime-widget-text: Use bmwt_html_ prefix

	for all HTML-related functions.

	* src/balsa-mime-widget-text.c (bmwt_html_zoom_in),
	(bmwt_html_zoom_out), (bmwt_html_zoom_reset),
	(bmwt_html_select_all_cb), (bmwt_html_populate_popup_menu),
	(bmwt_html_popup_context_menu), (bmwt_html_gesture_pressed_cb),
	(bmwt_html_populate_popup_cb), (bm_widget_new_html):

2020-06-04  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main-window: Connect to "notify::focus" signal instead of the
	"focus-in" and "focus-out" widget signals.

	And use the focus status to block the window's accelerator keys
	when the search entry has the keyboard focus.

	* src/main-window.c (bw_check_filter), (bw_create_index_widget),